// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ListingCard> renders 1`] = `
<View
  style={
    Array [
      Object {
        "overflow": "hidden",
      },
      Object {
        "width": 168,
      },
      undefined,
    ]
  }
>
  <View
    accessibilityComponentType={undefined}
    accessibilityLabel={undefined}
    accessibilityTraits={undefined}
    accessible={true}
    hitSlop={undefined}
    nativeID={undefined}
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={undefined}
    testID={undefined}
  >
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      collapsable={undefined}
      hasTVPreferredFocus={undefined}
      hitSlop={undefined}
      isTVSelectable={true}
      nativeID={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "backgroundColor": "#CDD2D4",
          "borderRadius": 3,
          "opacity": 1,
          "width": 168,
        }
      }
      testID={undefined}
      tvParallaxProperties={undefined}
    >
      <View>
        <View
          style={
            Array [
              Object {
                "alignContent": "center",
                "alignItems": "center",
                "backgroundColor": "#f4f4f4",
                "justifyContent": "center",
              },
              Array [
                Object {
                  "borderRadius": 3,
                  "opacity": 0.8,
                },
                Object {
                  "width": 168,
                },
                Object {
                  "height": 190,
                },
                false,
                Array [],
              ],
            ]
          }
        >
          <Image
            onLoad={[Function]}
            resizeMode="center"
            source={
              Object {
                "uri": "https://cdn.mnstatic.com/1/svg/placeholder/eiffel_tower.svg",
              }
            }
            style={
              Array [
                Object {
                  "borderRadius": 3,
                  "opacity": 0.8,
                },
                Object {
                  "width": 168,
                },
                Object {
                  "height": 190,
                },
                false,
                Array [],
              ]
            }
          />
          <ActivityIndicator
            animating={true}
            color="#dbdbdb"
            hidesWhenStopped={true}
            size="large"
            style={
              Array [
                Object {
                  "position": "absolute",
                },
                false,
              ]
            }
          />
        </View>
        <View
          pointerEvents="none"
          style={
            Object {
              "alignContent": "center",
              "alignItems": "center",
              "alignSelf": "center",
              "height": "100%",
              "justifyContent": "center",
              "left": 0,
              "padding": 10,
              "position": "absolute",
              "width": "100%",
            }
          }
        >
          <View />
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "paddingVertical": 10,
        }
      }
    />
  </View>
</View>
`;

exports[`<ListingCard> when {category} 1`] = `
<View
  style={
    Array [
      Object {
        "overflow": "hidden",
      },
      Object {
        "width": 168,
      },
      undefined,
    ]
  }
>
  <View
    accessibilityComponentType={undefined}
    accessibilityLabel={undefined}
    accessibilityTraits={undefined}
    accessible={true}
    hitSlop={undefined}
    nativeID={undefined}
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={undefined}
    testID={undefined}
  >
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      collapsable={undefined}
      hasTVPreferredFocus={undefined}
      hitSlop={undefined}
      isTVSelectable={true}
      nativeID={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "backgroundColor": "#CDD2D4",
          "borderRadius": 3,
          "opacity": 1,
          "width": 168,
        }
      }
      testID={undefined}
      tvParallaxProperties={undefined}
    >
      <View>
        <View
          style={
            Array [
              Object {
                "alignContent": "center",
                "alignItems": "center",
                "backgroundColor": "#f4f4f4",
                "justifyContent": "center",
              },
              Array [
                Object {
                  "borderRadius": 3,
                  "opacity": 0.8,
                },
                Object {
                  "width": 168,
                },
                Object {
                  "height": 190,
                },
                false,
                Array [],
              ],
            ]
          }
        >
          <Image
            onLoad={[Function]}
            resizeMode="center"
            source={
              Object {
                "uri": "https://cdn.mnstatic.com/1/svg/placeholder/eiffel_tower.svg",
              }
            }
            style={
              Array [
                Object {
                  "borderRadius": 3,
                  "opacity": 0.8,
                },
                Object {
                  "width": 168,
                },
                Object {
                  "height": 190,
                },
                false,
                Array [],
              ]
            }
          />
          <ActivityIndicator
            animating={true}
            color="#dbdbdb"
            hidesWhenStopped={true}
            size="large"
            style={
              Array [
                Object {
                  "position": "absolute",
                },
                false,
              ]
            }
          />
        </View>
        <View
          pointerEvents="none"
          style={
            Object {
              "alignContent": "center",
              "alignItems": "center",
              "alignSelf": "center",
              "height": "100%",
              "justifyContent": "center",
              "left": 0,
              "padding": 10,
              "position": "absolute",
              "width": "100%",
            }
          }
        >
          <View />
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "paddingVertical": 10,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        numberOfLines={undefined}
        style={
          Array [
            Object {
              "color": "#4a4a4a",
              "fontFamily": undefined,
            },
            false,
            false,
            false,
            false,
            Object {
              "fontSize": 16,
              "lineHeight": 20.8,
            },
            Object {
              "fontSize": 12,
              "lineHeight": 14.399999999999999,
            },
            false,
            false,
            false,
            false,
            Object {
              "color": "#9b9b9b",
            },
            false,
            false,
            Object {},
          ]
        }
      >
        Hello world
      </Text>
    </View>
  </View>
</View>
`;

exports[`<ListingCard> when {children} 1`] = `
<View
  style={
    Array [
      Object {
        "overflow": "hidden",
      },
      Object {
        "width": 168,
      },
      undefined,
    ]
  }
>
  <View
    accessibilityComponentType={undefined}
    accessibilityLabel={undefined}
    accessibilityTraits={undefined}
    accessible={true}
    hitSlop={undefined}
    nativeID={undefined}
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={undefined}
    testID={undefined}
  >
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      collapsable={undefined}
      hasTVPreferredFocus={undefined}
      hitSlop={undefined}
      isTVSelectable={true}
      nativeID={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "backgroundColor": "#CDD2D4",
          "borderRadius": 3,
          "opacity": 1,
          "width": 168,
        }
      }
      testID={undefined}
      tvParallaxProperties={undefined}
    >
      <View>
        <View
          style={
            Array [
              Object {
                "alignContent": "center",
                "alignItems": "center",
                "backgroundColor": "#f4f4f4",
                "justifyContent": "center",
              },
              Array [
                Object {
                  "borderRadius": 3,
                  "opacity": 0.8,
                },
                Object {
                  "width": 168,
                },
                Object {
                  "height": 190,
                },
                false,
                Array [],
              ],
            ]
          }
        >
          <Image
            onLoad={[Function]}
            resizeMode="center"
            source={
              Object {
                "uri": "https://cdn.mnstatic.com/1/svg/placeholder/eiffel_tower.svg",
              }
            }
            style={
              Array [
                Object {
                  "borderRadius": 3,
                  "opacity": 0.8,
                },
                Object {
                  "width": 168,
                },
                Object {
                  "height": 190,
                },
                false,
                Array [],
              ]
            }
          />
          <ActivityIndicator
            animating={true}
            color="#dbdbdb"
            hidesWhenStopped={true}
            size="large"
            style={
              Array [
                Object {
                  "position": "absolute",
                },
                false,
              ]
            }
          />
        </View>
        <View
          pointerEvents="none"
          style={
            Object {
              "alignContent": "center",
              "alignItems": "center",
              "alignSelf": "center",
              "height": "100%",
              "justifyContent": "center",
              "left": 0,
              "padding": 10,
              "position": "absolute",
              "width": "100%",
            }
          }
        >
          <View />
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "paddingVertical": 10,
        }
      }
    >
      <View
        accessibilityComponentType={undefined}
        accessibilityLabel={undefined}
        accessibilityTraits={undefined}
        accessible={true}
        collapsable={undefined}
        hasTVPreferredFocus={undefined}
        hitSlop={undefined}
        isTVSelectable={true}
        nativeID={undefined}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignSelf": "flex-start",
            "borderRadius": 22.5,
            "marginHorizontal": 0,
            "opacity": 1,
          }
        }
        testID={undefined}
        tvParallaxProperties={undefined}
      >
        <View
          style={
            Array [
              Object {
                "alignContent": "center",
                "alignItems": "center",
                "borderRadius": 3,
                "display": "flex",
                "flexDirection": "row",
                "justifyContent": "center",
              },
              Object {
                "height": 45,
                "minWidth": 45,
                "paddingHorizontal": 30,
              },
              Object {
                "height": 30,
                "minWidth": 30,
                "paddingHorizontal": 15,
              },
              false,
              Object {
                "borderRadius": 22.5,
              },
              false,
              Object {
                "backgroundColor": "#9b9b9b",
              },
              false,
              false,
              false,
              false,
              false,
              false,
            ]
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            numberOfLines={undefined}
            style={
              Array [
                Object {
                  "color": "#4a4a4a",
                  "fontFamily": undefined,
                },
                false,
                Object {
                  "fontWeight": "600",
                },
                false,
                false,
                Object {
                  "fontSize": 16,
                  "lineHeight": 20.8,
                },
                false,
                false,
                false,
                false,
                false,
                false,
                false,
                false,
                Object {
                  "color": "#ffffff",
                  "fontSize": 12,
                },
              ]
            }
          >
            15 Actividades
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`<ListingCard> when {description} 1`] = `
<View
  style={
    Array [
      Object {
        "overflow": "hidden",
      },
      Object {
        "width": 168,
      },
      undefined,
    ]
  }
>
  <View
    accessibilityComponentType={undefined}
    accessibilityLabel={undefined}
    accessibilityTraits={undefined}
    accessible={true}
    hitSlop={undefined}
    nativeID={undefined}
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={undefined}
    testID={undefined}
  >
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      collapsable={undefined}
      hasTVPreferredFocus={undefined}
      hitSlop={undefined}
      isTVSelectable={true}
      nativeID={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "backgroundColor": "#CDD2D4",
          "borderRadius": 3,
          "opacity": 1,
          "width": 168,
        }
      }
      testID={undefined}
      tvParallaxProperties={undefined}
    >
      <View>
        <View
          style={
            Array [
              Object {
                "alignContent": "center",
                "alignItems": "center",
                "backgroundColor": "#f4f4f4",
                "justifyContent": "center",
              },
              Array [
                Object {
                  "borderRadius": 3,
                  "opacity": 0.8,
                },
                Object {
                  "width": 168,
                },
                Object {
                  "height": 190,
                },
                false,
                Array [],
              ],
            ]
          }
        >
          <Image
            onLoad={[Function]}
            resizeMode="center"
            source={
              Object {
                "uri": "https://cdn.mnstatic.com/1/svg/placeholder/eiffel_tower.svg",
              }
            }
            style={
              Array [
                Object {
                  "borderRadius": 3,
                  "opacity": 0.8,
                },
                Object {
                  "width": 168,
                },
                Object {
                  "height": 190,
                },
                false,
                Array [],
              ]
            }
          />
          <ActivityIndicator
            animating={true}
            color="#dbdbdb"
            hidesWhenStopped={true}
            size="large"
            style={
              Array [
                Object {
                  "position": "absolute",
                },
                false,
              ]
            }
          />
        </View>
        <View
          pointerEvents="none"
          style={
            Object {
              "alignContent": "center",
              "alignItems": "center",
              "alignSelf": "center",
              "height": "100%",
              "justifyContent": "center",
              "left": 0,
              "padding": 10,
              "position": "absolute",
              "width": "100%",
            }
          }
        >
          <View />
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "paddingVertical": 10,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        numberOfLines={3}
        style={
          Array [
            Object {
              "color": "#4a4a4a",
              "fontFamily": undefined,
            },
            false,
            false,
            false,
            false,
            Object {
              "fontSize": 16,
              "lineHeight": 20.8,
            },
            Object {
              "fontSize": 12,
              "lineHeight": 14.399999999999999,
            },
            false,
            false,
            false,
            false,
            Object {
              "color": "#9b9b9b",
            },
            false,
            false,
            Object {
              "maxHeight": 36,
              "overflow": "hidden",
            },
          ]
        }
      >
        Hello world
      </Text>
    </View>
  </View>
</View>
`;

exports[`<ListingCard> when {image} 1`] = `
<View
  style={
    Array [
      Object {
        "overflow": "hidden",
      },
      Object {
        "width": 168,
      },
      undefined,
    ]
  }
>
  <View
    accessibilityComponentType={undefined}
    accessibilityLabel={undefined}
    accessibilityTraits={undefined}
    accessible={true}
    hitSlop={undefined}
    nativeID={undefined}
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={undefined}
    testID={undefined}
  >
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      collapsable={undefined}
      hasTVPreferredFocus={undefined}
      hitSlop={undefined}
      isTVSelectable={true}
      nativeID={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "backgroundColor": "#CDD2D4",
          "borderRadius": 3,
          "opacity": 1,
          "width": 168,
        }
      }
      testID={undefined}
      tvParallaxProperties={undefined}
    >
      <View>
        <View
          style={
            Array [
              Object {
                "alignContent": "center",
                "alignItems": "center",
                "backgroundColor": "#f4f4f4",
                "justifyContent": "center",
              },
              Array [
                Object {
                  "borderRadius": 3,
                  "opacity": 0.8,
                },
                Object {
                  "width": 168,
                },
                Object {
                  "height": 190,
                },
                false,
                Array [],
              ],
            ]
          }
        >
          <Image
            onLoad={[Function]}
            resizeMode="cover"
            source={
              Object {
                "uri": "https://picsum.photos/320/200/?random",
              }
            }
            style={
              Array [
                Object {
                  "borderRadius": 3,
                  "opacity": 0.8,
                },
                Object {
                  "width": 168,
                },
                Object {
                  "height": 190,
                },
                false,
                Array [],
              ]
            }
          />
          <ActivityIndicator
            animating={true}
            color="#dbdbdb"
            hidesWhenStopped={true}
            size="large"
            style={
              Array [
                Object {
                  "position": "absolute",
                },
                false,
              ]
            }
          />
        </View>
        <View
          pointerEvents="none"
          style={
            Object {
              "alignContent": "center",
              "alignItems": "center",
              "alignSelf": "center",
              "height": "100%",
              "justifyContent": "center",
              "left": 0,
              "padding": 10,
              "position": "absolute",
              "width": "100%",
            }
          }
        >
          <View />
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "paddingVertical": 10,
        }
      }
    />
  </View>
</View>
`;

exports[`<ListingCard> when {rating} 1`] = `
<View
  style={
    Array [
      Object {
        "overflow": "hidden",
      },
      Object {
        "width": 168,
      },
      undefined,
    ]
  }
>
  <View
    accessibilityComponentType={undefined}
    accessibilityLabel={undefined}
    accessibilityTraits={undefined}
    accessible={true}
    hitSlop={undefined}
    nativeID={undefined}
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={undefined}
    testID={undefined}
  >
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      collapsable={undefined}
      hasTVPreferredFocus={undefined}
      hitSlop={undefined}
      isTVSelectable={true}
      nativeID={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "backgroundColor": "#CDD2D4",
          "borderRadius": 3,
          "opacity": 1,
          "width": 168,
        }
      }
      testID={undefined}
      tvParallaxProperties={undefined}
    >
      <View>
        <View
          style={
            Array [
              Object {
                "alignContent": "center",
                "alignItems": "center",
                "backgroundColor": "#f4f4f4",
                "justifyContent": "center",
              },
              Array [
                Object {
                  "borderRadius": 3,
                  "opacity": 0.8,
                },
                Object {
                  "width": 168,
                },
                Object {
                  "height": 190,
                },
                false,
                Array [],
              ],
            ]
          }
        >
          <Image
            onLoad={[Function]}
            resizeMode="center"
            source={
              Object {
                "uri": "https://cdn.mnstatic.com/1/svg/placeholder/eiffel_tower.svg",
              }
            }
            style={
              Array [
                Object {
                  "borderRadius": 3,
                  "opacity": 0.8,
                },
                Object {
                  "width": 168,
                },
                Object {
                  "height": 190,
                },
                false,
                Array [],
              ]
            }
          />
          <ActivityIndicator
            animating={true}
            color="#dbdbdb"
            hidesWhenStopped={true}
            size="large"
            style={
              Array [
                Object {
                  "position": "absolute",
                },
                false,
              ]
            }
          />
        </View>
        <View
          pointerEvents="none"
          style={
            Object {
              "alignContent": "center",
              "alignItems": "center",
              "alignSelf": "center",
              "height": "100%",
              "justifyContent": "center",
              "left": 0,
              "padding": 10,
              "position": "absolute",
              "width": "100%",
            }
          }
        >
          <View />
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "paddingVertical": 10,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          numberOfLines={undefined}
          style={
            Array [
              Object {
                "color": "#4a4a4a",
                "fontFamily": undefined,
              },
              false,
              false,
              false,
              false,
              Object {
                "fontSize": 16,
                "lineHeight": 20.8,
              },
              false,
              false,
              false,
              false,
              false,
              false,
              Object {
                "color": "#10c0bc",
              },
              false,
              Object {
                "lineHeight": 16,
                "marginBottom": 5,
                "marginRight": 2.5,
              },
            ]
          }
        >
          ★
        </Text>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          numberOfLines={undefined}
          style={
            Array [
              Object {
                "color": "#4a4a4a",
                "fontFamily": undefined,
              },
              false,
              false,
              false,
              false,
              Object {
                "fontSize": 16,
                "lineHeight": 20.8,
              },
              false,
              false,
              false,
              false,
              false,
              false,
              Object {
                "color": "#10c0bc",
              },
              false,
              Object {
                "lineHeight": 16,
                "marginBottom": 5,
                "marginRight": 2.5,
              },
            ]
          }
        >
          ★
        </Text>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          numberOfLines={undefined}
          style={
            Array [
              Object {
                "color": "#4a4a4a",
                "fontFamily": undefined,
              },
              false,
              false,
              false,
              false,
              Object {
                "fontSize": 16,
                "lineHeight": 20.8,
              },
              false,
              false,
              false,
              false,
              false,
              false,
              Object {
                "color": "#10c0bc",
              },
              false,
              Object {
                "lineHeight": 16,
                "marginBottom": 5,
                "marginRight": 2.5,
              },
            ]
          }
        >
          ★
        </Text>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          numberOfLines={undefined}
          style={
            Array [
              Object {
                "color": "#4a4a4a",
                "fontFamily": undefined,
              },
              false,
              false,
              false,
              false,
              Object {
                "fontSize": 16,
                "lineHeight": 20.8,
              },
              false,
              false,
              false,
              false,
              false,
              false,
              Object {
                "color": "#10c0bc",
              },
              false,
              Object {
                "lineHeight": 16,
                "marginBottom": 5,
                "marginRight": 2.5,
              },
            ]
          }
        >
          ★
        </Text>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          numberOfLines={undefined}
          style={
            Array [
              Object {
                "color": "#4a4a4a",
                "fontFamily": undefined,
              },
              false,
              false,
              false,
              false,
              Object {
                "fontSize": 16,
                "lineHeight": 20.8,
              },
              false,
              false,
              false,
              false,
              false,
              false,
              Object {
                "color": "#10c0bc",
              },
              false,
              Object {
                "lineHeight": 16,
                "marginBottom": 5,
                "marginRight": 2.5,
              },
            ]
          }
        >
          ☆
        </Text>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          numberOfLines={undefined}
          style={
            Array [
              Object {
                "color": "#4a4a4a",
                "fontFamily": undefined,
              },
              false,
              false,
              false,
              false,
              Object {
                "fontSize": 16,
                "lineHeight": 20.8,
              },
              Object {
                "fontSize": 12,
                "lineHeight": 14.399999999999999,
              },
              false,
              false,
              false,
              false,
              Object {
                "color": "#9b9b9b",
              },
              false,
              false,
              Object {
                "marginBottom": 5,
              },
            ]
          }
        >
           (12)
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`<ListingCard> when {style} 1`] = `
<View
  style={
    Array [
      Object {
        "overflow": "hidden",
      },
      Object {
        "width": 168,
      },
      Object {
        "backgroundColor": "#10c0bc",
        "paddingTop": 10,
      },
    ]
  }
>
  <View
    accessibilityComponentType={undefined}
    accessibilityLabel={undefined}
    accessibilityTraits={undefined}
    accessible={true}
    hitSlop={undefined}
    nativeID={undefined}
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={undefined}
    testID={undefined}
  >
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      collapsable={undefined}
      hasTVPreferredFocus={undefined}
      hitSlop={undefined}
      isTVSelectable={true}
      nativeID={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "backgroundColor": "#CDD2D4",
          "borderRadius": 3,
          "opacity": 1,
          "width": 168,
        }
      }
      testID={undefined}
      tvParallaxProperties={undefined}
    >
      <View>
        <View
          style={
            Array [
              Object {
                "alignContent": "center",
                "alignItems": "center",
                "backgroundColor": "#f4f4f4",
                "justifyContent": "center",
              },
              Array [
                Object {
                  "borderRadius": 3,
                  "opacity": 0.8,
                },
                Object {
                  "width": 168,
                },
                Object {
                  "height": 190,
                },
                false,
                Array [],
              ],
            ]
          }
        >
          <Image
            onLoad={[Function]}
            resizeMode="center"
            source={
              Object {
                "uri": "https://cdn.mnstatic.com/1/svg/placeholder/eiffel_tower.svg",
              }
            }
            style={
              Array [
                Object {
                  "borderRadius": 3,
                  "opacity": 0.8,
                },
                Object {
                  "width": 168,
                },
                Object {
                  "height": 190,
                },
                false,
                Array [],
              ]
            }
          />
          <ActivityIndicator
            animating={true}
            color="#dbdbdb"
            hidesWhenStopped={true}
            size="large"
            style={
              Array [
                Object {
                  "position": "absolute",
                },
                false,
              ]
            }
          />
        </View>
        <View
          pointerEvents="none"
          style={
            Object {
              "alignContent": "center",
              "alignItems": "center",
              "alignSelf": "center",
              "height": "100%",
              "justifyContent": "center",
              "left": 0,
              "padding": 10,
              "position": "absolute",
              "width": "100%",
            }
          }
        >
          <View />
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "paddingVertical": 10,
        }
      }
    />
  </View>
</View>
`;

exports[`<ListingCard> when {title} 1`] = `
<View
  style={
    Array [
      Object {
        "overflow": "hidden",
      },
      Object {
        "width": 168,
      },
      undefined,
    ]
  }
>
  <View
    accessibilityComponentType={undefined}
    accessibilityLabel={undefined}
    accessibilityTraits={undefined}
    accessible={true}
    hitSlop={undefined}
    nativeID={undefined}
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={undefined}
    testID={undefined}
  >
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      collapsable={undefined}
      hasTVPreferredFocus={undefined}
      hitSlop={undefined}
      isTVSelectable={true}
      nativeID={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "backgroundColor": "#CDD2D4",
          "borderRadius": 3,
          "opacity": 1,
          "width": 168,
        }
      }
      testID={undefined}
      tvParallaxProperties={undefined}
    >
      <View>
        <View
          style={
            Array [
              Object {
                "alignContent": "center",
                "alignItems": "center",
                "backgroundColor": "#f4f4f4",
                "justifyContent": "center",
              },
              Array [
                Object {
                  "borderRadius": 3,
                  "opacity": 0.8,
                },
                Object {
                  "width": 168,
                },
                Object {
                  "height": 190,
                },
                false,
                Array [],
              ],
            ]
          }
        >
          <Image
            onLoad={[Function]}
            resizeMode="center"
            source={
              Object {
                "uri": "https://cdn.mnstatic.com/1/svg/placeholder/eiffel_tower.svg",
              }
            }
            style={
              Array [
                Object {
                  "borderRadius": 3,
                  "opacity": 0.8,
                },
                Object {
                  "width": 168,
                },
                Object {
                  "height": 190,
                },
                false,
                Array [],
              ]
            }
          />
          <ActivityIndicator
            animating={true}
            color="#dbdbdb"
            hidesWhenStopped={true}
            size="large"
            style={
              Array [
                Object {
                  "position": "absolute",
                },
                false,
              ]
            }
          />
        </View>
        <View
          pointerEvents="none"
          style={
            Object {
              "alignContent": "center",
              "alignItems": "center",
              "alignSelf": "center",
              "height": "100%",
              "justifyContent": "center",
              "left": 0,
              "padding": 10,
              "position": "absolute",
              "width": "100%",
            }
          }
        >
          <View />
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "paddingVertical": 10,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "#4a4a4a",
              "fontFamily": undefined,
            },
            false,
            false,
            Object {
              "fontWeight": "bold",
            },
            false,
            Object {
              "fontSize": 16,
              "lineHeight": 20.8,
            },
            false,
            Object {
              "fontSize": 14,
              "lineHeight": 16.8,
            },
            false,
            false,
            false,
            false,
            false,
            false,
            Object {
              "marginVertical": 5,
            },
          ]
        }
      >
        Hello world
      </Text>
    </View>
  </View>
</View>
`;
